# binarylane-controllers

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Tiltfile  build.rs  cluster-autoscaler-dev-values.yaml  dev-cloud-init.sh  external-dns-dev-values.yaml  go.mod  go.sum  main.go  scale-test.yaml  tilt-values.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  integration.yml  issue-bump.yml  next-rc-on-merge.yml  release.yml
autoscaler/: provider.go
binarylane/: client.go  loadbalancer.go
binarylane-client/: Cargo.toml
binarylane-client/src/: lib.rs
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  crd.yaml  deployment.yaml  mtls.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml  vip-daemonset.yaml
charts/binarylane-controllers/: Chart.yaml  values.yaml
charts/binarylane-controllers-crds/: Chart.yaml
charts/binarylane-controllers-crds/templates/: autoscalinggroups.yaml
charts/binarylane-controllers/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  mtls.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: autoscaler.rs  external_dns.rs  node_lb.rs
nodecontroller/: controller.go
plans/: server-password-management.md
proto/: externalgrpc.pb.go  externalgrpc.proto  externalgrpc_grpc.pb.go
servicecontroller/: controller.go
src/: autoscaler.rs  binarylane.rs  crd.rs  dns_webhook.rs  main.rs  node_controller.rs  service_controller.rs
src/controllers/: mod.rs  node_bind.rs  node_deletion.rs  node_provision.rs  node_sync.rs  service.rs
xtask/: Cargo.toml
xtask/src/: main.rs
