[workspace]
members = [".", "xtask"]

[package]
name = "binarylane-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
k8s-openapi = { version = "0.25", features = ["v1_33"] }
kube = { version = "1", features = ["runtime", "client", "derive", "rustls-tls"], default-features = false }
prost = "0.13"
prost-types = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
protobuf-src = "2"
