[workspace]
members = [".", "binarylane-client", "integration-tests", "xtask"]

[package]
name = "binarylane-controller"
version = "0.0.1-rc.2"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
binarylane-client = { path = "binarylane-client" }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
k8s-openapi = { version = "0.25", features = ["v1_33"] }
k8s-pb = "0.9"
kube = { version = "1", features = ["runtime", "client", "derive", "rustls-tls"], default-features = false }
prost = "0.13"
prost-types = "0.13"
prost_014 = { package = "prost", version = "0.14" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
tonic = { version = "0.13", features = ["tls-webpki-roots"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
