[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
binarylane-client = { path = "../binarylane-client" }
k8s-openapi = { version = "0.25", features = ["v1_33"] }
kube = { version = "1", features = ["runtime", "client", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
