[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bcrypt = "0.16"
binarylane-client = { path = "../binarylane-client" }
binarylane-controller = { path = ".." }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
k8s-openapi = { version = "0.25", features = ["v1_33"] }
kube = { version = "1", features = ["client", "rustls-tls"], default-features = false }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
